package com.springboot.MyTodoList.config;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.boot.context.event.ApplicationReadyEvent;
import org.springframework.context.annotation.Profile;
import org.springframework.context.event.EventListener;
import org.springframework.jdbc.core.JdbcTemplate;
import org.springframework.stereotype.Component;

/**
 * Ensures {@code PROJECT_TASK_EVENTS} exists when ddl-auto=none (prod/OKE multi-replica SSE relay).
 */
@Component
@Profile("!test")
public class ProjectTaskEventSchemaInitializer {

    private static final Logger log = LoggerFactory.getLogger(ProjectTaskEventSchemaInitializer.class);

    private final JdbcTemplate jdbcTemplate;

    public ProjectTaskEventSchemaInitializer(JdbcTemplate jdbcTemplate) {
        this.jdbcTemplate = jdbcTemplate;
    }

    @EventListener(ApplicationReadyEvent.class)
    public void ensureTable() {
        if (tableExists()) {
            log.debug("PROJECT_TASK_EVENTS already exists");
            return;
        }
        try {
            jdbcTemplate.execute(
                    "CREATE TABLE PROJECT_TASK_EVENTS ("
                            + "ID NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY, "
                            + "PROJECT_ID NUMBER NOT NULL, "
                            + "EVENT_TYPE VARCHAR2(50) NOT NULL, "
                            + "TASK_ID NUMBER, "
                            + "USER_ID NUMBER, "
                            + "SOURCE VARCHAR2(32), "
                            + "EVENT_TS TIMESTAMP NOT NULL, "
                            + "CREATED_AT TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL"
                            + ")");
            log.info("Created PROJECT_TASK_EVENTS for cross-pod SSE relay");
        } catch (Exception e) {
            if (isAlreadyExists(e)) {
                log.debug("PROJECT_TASK_EVENTS create raced or already present: {}", e.getMessage());
            } else {
                log.error(
                        "Could not create PROJECT_TASK_EVENTS — realtime sync across pods may fail until "
                                + "the table is created manually: {}",
                        e.getMessage());
                return;
            }
        }
        try {
            jdbcTemplate.execute("CREATE INDEX IDX_PTE_PROJECT_ID ON PROJECT_TASK_EVENTS (PROJECT_ID)");
        } catch (Exception e) {
            if (!isAlreadyExists(e)) {
                log.warn("Could not create IDX_PTE_PROJECT_ID: {}", e.getMessage());
            }
        }
    }

    private boolean tableExists() {
        try {
            Integer count = jdbcTemplate.queryForObject(
                    "SELECT COUNT(*) FROM user_tables WHERE UPPER(table_name) = 'PROJECT_TASK_EVENTS'",
                    Integer.class);
            return count != null && count > 0;
        } catch (Exception e) {
            log.warn("Could not probe PROJECT_TASK_EVENTS: {}", e.getMessage());
            return false;
        }
    }

    private static boolean isAlreadyExists(Exception e) {
        String msg = e.getMessage() != null ? e.getMessage().toUpperCase() : "";
        return msg.contains("ORA-00955") || msg.contains("ALREADY EXISTS") || msg.contains("NAME IS ALREADY USED");
    }
}
