package com.springboot.MyTodoList.config;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.boot.context.event.ApplicationReadyEvent;
import org.springframework.context.annotation.Profile;
import org.springframework.context.event.EventListener;
import org.springframework.jdbc.core.JdbcTemplate;
import org.springframework.stereotype.Component;

/**
 * Ensures {@code MANAGER.SPRINT_INSIGHT_EMBEDDINGS} exists when ddl-auto=none (prod/OKE).
 */
@Component
@Profile("!test")
public class SprintInsightEmbeddingSchemaInitializer {

    private static final Logger log = LoggerFactory.getLogger(SprintInsightEmbeddingSchemaInitializer.class);

    private final JdbcTemplate jdbcTemplate;

    public SprintInsightEmbeddingSchemaInitializer(JdbcTemplate jdbcTemplate) {
        this.jdbcTemplate = jdbcTemplate;
    }

    @EventListener(ApplicationReadyEvent.class)
    public void ensureTable() {
        if (tableExists()) {
            log.debug("SPRINT_INSIGHT_EMBEDDINGS already exists");
            return;
        }
        try {
            jdbcTemplate.execute(
                "CREATE TABLE MANAGER.SPRINT_INSIGHT_EMBEDDINGS ("
                    + "ID NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY, "
                    + "SPRINT_ID NUMBER NOT NULL, "
                    + "PROJECT_ID NUMBER NOT NULL, "
                    + "TEXT_CHUNK VARCHAR2(4000), "
                    + "EMBEDDING CLOB, "
                    + "CREATED_AT TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL, "
                    + "CONSTRAINT UQ_SIE_SPRINT UNIQUE (SPRINT_ID)"
                    + ")");
            log.info("Created MANAGER.SPRINT_INSIGHT_EMBEDDINGS");
        } catch (Exception e) {
            if (isAlreadyExists(e)) {
                log.debug("SPRINT_INSIGHT_EMBEDDINGS create raced or already present: {}", e.getMessage());
            } else {
                log.error("Could not create SPRINT_INSIGHT_EMBEDDINGS — similar sprint search will fail until "
                    + "scripts/create_sprint_insight_embeddings.sql is applied: {}", e.getMessage());
                return;
            }
        }
        try {
            jdbcTemplate.execute(
                "CREATE INDEX MANAGER.IDX_SIE_PROJECT ON MANAGER.SPRINT_INSIGHT_EMBEDDINGS (PROJECT_ID)");
            log.info("Created MANAGER.IDX_SIE_PROJECT");
        } catch (Exception e) {
            if (!isAlreadyExists(e)) {
                log.warn("Could not create IDX_SIE_PROJECT: {}", e.getMessage());
            }
        }
    }

    private boolean tableExists() {
        try {
            Integer count = jdbcTemplate.queryForObject(
                "SELECT COUNT(*) FROM user_tables WHERE UPPER(table_name) = 'SPRINT_INSIGHT_EMBEDDINGS'",
                Integer.class);
            return count != null && count > 0;
        } catch (Exception e) {
            log.warn("Could not probe SPRINT_INSIGHT_EMBEDDINGS: {}", e.getMessage());
            return false;
        }
    }

    private static boolean isAlreadyExists(Exception e) {
        String msg = e.getMessage() != null ? e.getMessage().toUpperCase() : "";
        return msg.contains("ORA-00955") || msg.contains("ALREADY EXISTS") || msg.contains("NAME IS ALREADY USED");
    }
}
